2013-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (w2c/config.h): Avoid 'parallel make' problems.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cvtbib.sed: Generate bibtex.c to first #include "cpascal.h".
	* makecpool.c: Generate tex-pool.c to first #include "texd.h".
	* web2c-lexer.l: First #include <w2c/config.h> via "web2c.h".

2013-06-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* main.c: Drop variable 'error' (set but not used).

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Enable silent rules.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fixwrites.c, main.c, makecpool.c, splitup.c:
	Use binary mode for output files.
	* fixwrites.c: Recognize (u)ppltotf as pltotf variant.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2012-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* web2c-parser.[ch]: Regenerate with bison 2.5.1.

2012-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* web2c-lexer.l: Added the never-interactive option to prevent
	flex from creating a problematic prototype for isatty().

2012-04-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmf.defines (callmakempx, getrandomseed): Removed, MP only.

2012-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* common.defines: Define ustringcast().

2012-02-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmf.defines: Moved writedvi from here ...
	* common.defines: ... to here for use in GFtoDVI.

	* common.defines: Drop writechunk, GFtoDVI now uses writedvi.

2012-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fixwrites.c: Replace 'fprintf(filename, "%c\n", char);' by
	'{ putc(char, filename); putc ('\n', filename); }'.  Patch from
	Akira Kakuto for (u)pDVItype & Co. where putc() => putc2().

2011-10-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* common.defines: Remove ALEPHHELP.
