@@ -1,3 +1,7 @@
+2013-07-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am (libweb2c.a): Avoid more 'parallel make' problems.
+
 2013-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am (w2c/config.h): Avoid 'parallel make' problems.
